--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,9 +18,9 @@
         <div class="site">
           <div class="header">
             <h1 class="title"><a href="/">TrailingZero</a></h1>
-            <a class="extra" href="/">home</a>
-            <a class="extra" href="/">home</a>
-            <a class="extra" href="/">home</a>
+            <a class="extra" href="/">About me</a>
+            <a class="extra" href="/">Publications</a>
+            <a class="extra" href="/">Projects</a>
           </div>
 
           {{ content }}
@@ -28,15 +28,21 @@
           <div class="footer">
             <div class="contact">
               <p>
-                Your Name<br />
-                What You Are<br />
-                you@example.com
+                Contact me or<br />
+                look me up at<br />
+                
               </p>
             </div>
             <div class="contact">
               <p>
-                <a href="https://github.com/yourusername">github.com/yourusername</a><br />
-                <a href="https://twitter.com/yourusername">twitter.com/yourusername</a><br />
+                <a href="http://www.linkedin.com/profile/view?id=43757519">linkedin/profile</a><br />
+                <a href="https://twitter.com/@trailingzero">twitter.com/trailingzero</a><br />
+              </p>
+            </div>
+            <div class="contact">
+              <p>
+                <a href="https://github.com/sdperez">github/sdperez</a><br />
+                <a href="http://www.researchgate.net/profile/Sebastian_Perez3">ResearchGate.com/profile</a><br />
               </p>
             </div>
           </div>
