Added additional pages
Cleaned up the look including new images and fonts. Added the about me,
publication and projects page (though empty)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,26 +11,28 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
+        <!-- Fonts-->
+        <link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,400italic' rel='stylesheet' type='text/css'>
 
     </head>
     <body>
 
         <div class="site">
           <div class="header">
-            <h1 class="title"><a href="/">TrailingZero</a></h1>
-            <a class="extra" href="/">About me</a>
-            <a class="extra" href="/">Publications</a>
-            <a class="extra" href="/">Projects</a>
+            <a class="extra" href="/">Home</a>
+            <a class="extra" href="/about.html">About me</a>
+            <a class="extra" href="/publications.html">Publications</a>
+            <a class="extra" href="/projects.html">Projects</a>
           </div>
 
           {{ content }}
-          <div class="push"></div>
+          
           <div class="footer">
+            <div class="push"></div>
             <div class="contact">
               <p>
-                Contact me or<br />
-                look me up at<br />
-                
+                Find me<br />
+                on<br />             
               </p>
             </div>
             <div class="contact">
