--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,8 @@ html, body {width: 100%; height: 100%; }
 
 body {
   background-color: #fff;
-  font: 13.34px Helvetica, Arial, sans-serif;
-  font-size: small;
+  font: 14px Helvetica, Arial, sans-serif;
+  font-size: normal;
   text-align: center;
 }
 
@@ -29,11 +29,10 @@ a         { color: #111; }
 a:hover   { color: #000; }
 a:visited { color: #a0a; }
 
-/*****************************************************************************/
-/*
-/* Home
-/*
-/*****************************************************************************/
+
+/****************************************************************************
+ Home
+****************************************************************************/
 .posts {
   list-style-type: none;
   margin-bottom: 2em;
@@ -44,7 +43,7 @@ a:visited { color: #a0a; }
 }
 
 .posts span {
-  color: #aaa;
+  color: #666;
   font-family: Monaco, "Courier New", monospace;
   font-size: 80%;
 }
@@ -53,23 +52,34 @@ a:visited { color: #a0a; }
 /*
 / Site
 /*****************************************************************************/
-
+h2{
+  margin-top: 1em;
+  margin-bottom: 1.2em;
+  font-size: 2.0em;
+  font-family:'Playfair Display', serif;
+  letter-spacing: 0.05em;
+  color: #000;
+  /*text-shadow: 1px 1px 1px rgba(255,255,255,0.6);*/
+}
+.circimage {
+  border-radius: 20em;
+  border: 1px solid #2B2E2E;
+}
 .site {
   min-height: 100%;
   height: auto !important;
   height: 100%;
-  font-size: 115%;
-  text-align: justify;
   width: 1000px;
-  /*margin: 0em auto 2em;*/
   line-height: 1.5em;
-  margin: 0 auto -80px;
+  margin: 0 auto 0;
+  border:2px solid gray;
+  background:#eee;
 }
 
 .header {
         width: 100%;
 	height: 33px;
-	background: #444;
+	background: #ccc;
 }
 
 .header a {
@@ -92,8 +102,13 @@ a:visited { color: #a0a; }
 }
 
 .header a.extra {
-  color: #ddd;
+  font-family:'Playfair Display', serif;
+  font-weight: bold;
+  font-style: italic;
+  text-decoration: none;
+  color: #555;
   margin-left: 1em;
+  letter-spacing: 0.03em;
 }
 
 .header a.extra:hover {
@@ -103,6 +118,34 @@ a:visited { color: #a0a; }
 .meta {
   color: #aaa;
 }
+
+.content {
+         width: 80%;
+         padding: 0px 0px 40px 100px;
+         
+}
+.content p{
+  font-family: Verdana;
+  -moz-column-count: 2;
+  -moz-column-gap: 1em;
+  -webkit-column-count: 2;
+  -webkit-column-gap: 1em;
+  column-count: 2;
+  column-gap: 1em;
+  line-height: 1.5em;
+  color: rgb(69,54,37);
+}
+.content p:first-child{
+  font-size: 1.25em;
+  font-family: Georgia;
+  font-style: italic;
+  -moz-column-count: 1;
+  -webkit-column-count: 1;
+  column-count: 1;
+  letter-spacing: 0.1em;
+}
+
+
 /* Right Sidebar Testing but didn't work
 -----------------------------------------------------------------------------*/
 /*.right-sidebar {
@@ -119,11 +162,10 @@ a:visited { color: #a0a; }
 
 
 .footer {
-  background: #444;
-  font-size: 80%;
-  color: #666;
-  border-top: 4px solid #eee;
-  margin-top: 2em;
+  background: #ccc;
+  color: #555;
+  border-top: 4px solid #fff;
+  margin-top: 4px;
   overflow: hidden;
 }
 
@@ -135,10 +177,10 @@ a:visited { color: #a0a; }
 .footer .contact a {
   color: #8085C1;
 }
-
-.footer, .push {
-	height: 80px; /* .push must be the same height as .footer */
-}
+/*
+.footer .push {
+	height: 80px;  .push must be the same height as .footer 
+}*/
 
 .footer .rss {
   margin-top: 1.1em;
@@ -165,12 +207,14 @@ a:visited { color: #a0a; }
 
 .post ul, .post ol {
   margin-left: 1.35em;
+  margin-bottom:4em;
 }
 
 .post code {
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .2em;
+  text-align: justify;
 }
 
 .post pre code {
