--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,14 +37,10 @@
             </div>
             <div class="contact">
               <p>
-                <a href="http://www.linkedin.com/profile/view?id=43757519">linkedin/profile</a><br />
-                <a href="https://twitter.com/@trailingzero">twitter.com/trailingzero</a><br />
-              </p>
-            </div>
-            <div class="contact">
-              <p>
-                <a href="https://github.com/sdperez">github/sdperez</a><br />
-                <a href="http://www.researchgate.net/profile/Sebastian_Perez3">ResearchGate.com/profile</a><br />
+                <a href="http://www.linkedin.com/profile/view?id=43757519">linkedin</a>
+                <a href="https://twitter.com/@trailingzero">twitter</a>
+                <a href="https://github.com/sdperez">github</a>
+                <a href="http://www.researchgate.net/profile/Sebastian_Perez3">ResearchGate</a>
               </p>
             </div>
           </div>
