--- a/css/main.css
+++ b/css/main.css
@@ -16,14 +16,31 @@ body {
   background-color: #fff;
   font: 14px Helvetica, Arial, sans-serif;
   font-size: normal;
-  text-align: center;
+  /*text-align: center;*/
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%; }
 
 h1 { margin-bottom: 1em; }
-p { margin: 1em 0; }
+
+h2{
+  margin: 1em 3em 1.2em;
+  font-size: 2.0em;
+  font-family:'Playfair Display', serif;
+  letter-spacing: 0.05em;
+  color: #000;
+  text-align: center;
+ 
+}
+
+p{
+  
+  margin: 1em 6em 0 6em;
+  font-family: Verdana;
+  line-height: 1.5em;
+  color: rgb(69,54,37);
+}
 
 a         { color: #111; }
 a:hover   { color: #000; }
@@ -35,7 +52,7 @@ a:visited { color: #a0a; }
 ****************************************************************************/
 .posts {
   list-style-type: none;
-  margin-bottom: 2em;
+  margin: 1em 0 0 16em;
 }
 
 .posts li {
@@ -52,18 +69,10 @@ a:visited { color: #a0a; }
 /*
 / Site
 /*****************************************************************************/
-h2{
-  margin-top: 1em;
-  margin-bottom: 1.2em;
-  font-size: 2.0em;
-  font-family:'Playfair Display', serif;
-  letter-spacing: 0.05em;
-  color: #000;
-  /*text-shadow: 1px 1px 1px rgba(255,255,255,0.6);*/
-}
+
 .circimage {
   border-radius: 20em;
-  border: 1px solid #2B2E2E;
+  border: 2px solid #2B2E2E;
 }
 .site {
   min-height: 100%;
@@ -80,6 +89,7 @@ h2{
         width: 100%;
 	height: 33px;
 	background: #ccc;
+        text-align: center;
 }
 
 .header a {
@@ -145,23 +155,8 @@ h2{
   letter-spacing: 0.1em;
 }
 
-
-/* Right Sidebar Testing but didn't work
------------------------------------------------------------------------------*/
-/*.right-sidebar {
-	float: left;
-	width: 250px;
-	margin-left: -250px;
-	position: relative;
-	background: #555;
-}*/
-
-
-
-
-
-
 .footer {
+  text-align: center;
   background: #ccc;
   color: #555;
   border-top: 4px solid #fff;
@@ -170,12 +165,23 @@ h2{
 }
 
 .footer .contact {
-  float: left;
-  margin-right: 3em;
+  /*float: left;*/
+  text-align: center;
+  /*margin-right: 3em;*/
+  }
+.footer p{
+   font-family:'Playfair Display', serif;
+  font-weight: bold;
+  font-style: italic;
+  text-decoration: none;
+  color: #555;
+  /*margin-left: 1em;*/
+  letter-spacing: 0.03em;
 }
 
 .footer .contact a {
   color: #8085C1;
+  margin-left: 2em;
 }
 /*
 .footer .push {
@@ -202,7 +208,8 @@ h2{
 .post pre {
   border: 1px solid #ddd;
   background-color: #eef;
-  padding: 0 .4em;
+  padding: 0 20em 0 10em;
+  
 }
 
 .post ul, .post ol {
@@ -214,7 +221,7 @@ h2{
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .2em;
-  text-align: justify;
+  
 }
 
 .post pre code {
