--- a/css/main.css
+++ b/css/main.css
@@ -31,9 +31,26 @@ h2{
   letter-spacing: 0.05em;
   color: #000;
   text-align: center;
- 
 }
 
+h3{
+  margin: 1em 3em 1.2em;
+  font-size: 1.6em;
+  font-family:'Playfair Display', sans-serif;
+  letter-spacing: 0.05em;
+}
+h4{
+  margin: 1em 3em 1.2em;
+  font-size: 1.4em;
+  font-family:'Playfair Display', sans-serif;
+  letter-spacing: 0.05em;
+}
+h5{
+  margin: 1em 3em 1.2em;
+  font-size: 1.2em;
+  font-family:'Playfair Display', sans-serif;
+  letter-spacing: 0.05em;
+}
 p{
   
   margin: 1em 6em 0 6em;
@@ -219,7 +236,7 @@ a:visited { color: #a0a; }
 
 .post code {
   border: 1px solid #ddd;
-  background-color: #eef;
+  background-color: #aaa;
   padding: 0 .2em;
   
 }
