--- a/css/main.css
+++ b/css/main.css
@@ -236,7 +236,7 @@ a:visited { color: #a0a; }
 
 .post code {
   border: 1px solid #ddd;
-  background-color: #aaa;
+  background-color: #eef;
   padding: 0 .2em;
   
 }
