--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,10 @@ a         { color: #111; }
 a:hover   { color: #000; }
 a:visited { color: #a0a; }
 
+ul {
+  margin: 1em 2em 0 6em;
+}
+
 
 /****************************************************************************
  Home
